fixed some styling / spacing on the tool bars.

--- a/webapp/trainerapp/static/css/app.css
+++ b/webapp/trainerapp/static/css/app.css
@@ -32,6 +32,10 @@
   /*padding: 5px;*/
 }
 
+.nav-bar, .task-bar {
+  padding: 10px;
+}
+
 .note-container {
   flex: 1;
   overflow: auto;
